src/components/menu/layout/menu-layout.css
.menu {
  padding: 2rem 2.25rem 1rem;
  margin: 0 auto;
  background-color: var(--light);
  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
}
  
@media (min-width: 660px) {
  .menu {
    display: grid;
    grid-gap: 4rem;
    grid-template-columns: 1fr 1fr;
  }
}

.menu-item {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 1.5rem;
}

.column {
  float: left;
  width: 50%;
}

.mains {
  grid-column: 1 / 2;
}

.aside {
  grid-column: 0 / span 3;
  vertical-align: center;
}

.logo {
  margin: 0 auto 2rem;
  display: block;
  grid-column: 1 / 3;
}

@media (min-width: 660px) {
  .logo {
    width: 280px;
    margin-bottom: 0;
  }
}

.item-container {
  transition: box-shadow .3s;
  width: 100%;
  height: auto;
  padding: 10px;
  border-radius:10px;
}

.item-container:hover {
  box-shadow: 0 0 15px rgba(119, 119, 119, 0.2);
}

.item-container {
  transition: all 0.2s;
  transition-delay: 300ms;
}

.item-container:active {
  background-color: #0039A8;
}

.item-container:focus {
  background-color: #0F52C1;
}

